--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
+
   <div id="services" class="our-services section">
     <div class="services-right-dec">
       <img src="assets/images/services-right-dec.png" alt="">
@@ -220,13 +221,13 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="left-image">
-            <img src="assets/images/about-left-image.png" alt="Two Girls working together">
+            <img src="assets/images/convo.png" alt="Two Girls working together">
           </div>
         </div>
         <div class="col-lg-6">
           <div class="section-heading">
-            <h2>Grow your website with our <em>SEO Tools</em> &amp; <span>Project</span> Management</h2>
-            <p>You can browse free HTML templates on Too CSS website. Visit the website and explore latest website templates for your projects.</p>
+            <h2>Ganpat<em> University</em> <span>Convergence</span> 2022</h2>
+            <p>Convergence 2022 is one of the most awaited events of the year, making campus vibrant, full of energy, excitement, and youthfulness. It is the combination of nine wings, namely - Infocrats, CIVESTA, Mech-Mechato, PetroX, Biotechnica, Electabuzz, MARITECH, MATHMAGIX, General Events. The Nine Wings encourages students from various field such as Technology, Computer Engineering, IT, Civil, Electrical Engineering and many more to showcase and test their skillset a national platform.</p>
             <div class="row">
               <div class="col-lg-4">
                 <div class="fact-item">
@@ -234,9 +235,8 @@ https://templatemo.com/tm-565-onix-digital
                     <div class="icon">
                       <img src="assets/images/service-icon-01.png" alt="">
                     </div>
-                    <div class="count-digit">320</div>
-                    <div class="count-title">SEO Projects</div>
-                    <p>Lorem ipsum dolor sitti amet, consectetur.</p>
+                    <div class="count-digit">50 +</div>
+                    <div class="count-title">Events</div>
                   </div>
                 </div>
               </div>
@@ -246,24 +246,22 @@ https://templatemo.com/tm-565-onix-digital
                     <div class="icon">
                       <img src="assets/images/service-icon-02.png" alt="">
                     </div>
-                    <div class="count-digit">640</div>
-                    <div class="count-title">Websites</div>
-                    <p>Lorem ipsum dolor sitti amet, consectetur.</p>
+                    <div class="count-digit">100,000 +</div>
+                    <div class="count-title">Cash Prize</div>
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4">
+              <!-- <div class="col-lg-4">
                 <div class="fact-item">
                   <div class="count-area-content">
                     <div class="icon">
                       <img src="assets/images/service-icon-03.png" alt="">
                     </div>
-                    <div class="count-digit">120</div>
-                    <div class="count-title">Satisfied Clients</div>
-                    <p>Lorem ipsum dolor sitti amet, consectetur.</p>
+                    <div class="count-digit">100,000 +</div>
+                    <div class="count-title">Cash Prize</div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -496,26 +494,6 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-  <div id="subscribe" class="subscribe">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="inner-content">
-            <div class="row">
-              <div class="col-lg-10 offset-lg-1">
-                <h2>Know Your Website SEO Score by Email</h2>
-                <form id="subscribe" action="" method="get">
-                  <input type="text" name="website" id="website" placeholder="Your Website URL" required="">
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
-                  <button type="submit" id="form-submit" class="main-button ">Subscribe</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- <div id="video" class="our-videos section">
     <div class="videos-left-dec">
@@ -631,9 +609,9 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-7">
           <div class="section-heading">
-            <h2>Feel free to <em>Contact</em> us via the <span>HTML form</span></h2>
+            <h2>Feel free to <em>Contact</em> us <span>Convergence 2022</span></h2>
             <div id="map">
-              <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.089243076618!2d72.45554761462051!3d23.52929240310455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395c476c5013fd03%3A0xa1fe01d9ab30482!2sGanpat%20University%20(GUNI)%2C%20India!5e0!3m2!1sen!2sin!4v1663061482407!5m2!1sen!2sin" width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen=""></iframe>
             </div>
             <div class="info">
               <span><i class="fa fa-phone"></i> <a href="#">010-020-0340<br>090-080-0760</a></span>
@@ -694,7 +672,7 @@ https://templatemo.com/tm-565-onix-digital
             <div class="logo">
               <a href="#"><img src="assets/images/logo.png" alt="Onix Digital TemplateMo"></a>
             </div>
-            <a href="#">info@company.com</a>
+            <a href="https://uvpce.guni.ac.in/" target="_blank">U.V.Patel College of Enginnering</a>
             <ul>
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -737,9 +715,9 @@ https://templatemo.com/tm-565-onix-digital
         </div>
         <div class="col-lg-12">
           <div class="copyright">
-            <p>Copyright © 2021 Onix Digital Co., Ltd. All Rights Reserved. 
+            <p>Copyright © 2022 Convergence , Ltd. All Rights Reserved. 
             <br>
-            Designed by <a rel="nofollow" href="https://templatemo.com" title="free CSS templates">TemplateMo</a></p>
+            Designed by <a rel="nofollow" href="https://uvpce.guni.ac.in/" title="uvpce">GUNI UVPCE</a></p>
           </div>
         </div>
       </div>
