--- a/index.html
+++ b/index.html
@@ -176,9 +176,6 @@ https://templatemo.com/tm-565-onix-digital
       </div>
     </div>
   </div>
-
-<<<<<<< HEAD
-=======
   <div class="timer_container">
     <h1 id="headline">14th and 15th October</h1>
     <div id="countdown">
@@ -195,7 +192,6 @@ https://templatemo.com/tm-565-onix-digital
       <span>🎂</span>
     </div>
   </div>
->>>>>>> 10fff4929e834928114f91f93ba3df2436dc3625
 
   <div id="services" class="our-services section">
     <div class="services-right-dec">
@@ -685,7 +681,13 @@ https://templatemo.com/tm-565-onix-digital
             </div>
           </div>
         </div>
+        <!-- <div>
+          <img src="assets/images/sustainable.jpg" alt="">
+        </div> -->
         <div class="col-lg-5 align-self-center">
+          <img src="assets/images/sustainable.jpg" alt="">
+        </div>
+        <!-- <div class="col-lg-5 align-self-center">
           <form id="contact" action="" method="get">
             <div class="row">
               <div class="col-lg-12">
@@ -715,12 +717,12 @@ https://templatemo.com/tm-565-onix-digital
               </div>
             </div>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
-    <div class="contact-dec">
+    <!-- <div class="contact-dec">
       <img src="assets/images/contact-dec.png" alt="">
-    </div>
+    </div> -->
     <div class="contact-left-dec">
       <img src="assets/images/contact-left-dec.png" alt="">
     </div>
