--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="assets/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/style.css">
 <!--
 
 TemplateMo 565 Onix Digital
@@ -33,52 +32,6 @@ https://templatemo.com/tm-565-onix-digital
   </head>
 
 <body>
-  <script>
-    (function () {
-  const second = 1000,
-        minute = second * 60,
-        hour = minute * 60,
-        day = hour * 24;
-
-  //I'm adding this section so I don't have to keep updating this pen every year :-)
-  //remove this if you don't need it
-  let today = new Date(),
-      dd = String(today.getDate()).padStart(2, "0"),
-      mm = String(today.getMonth() + 1).padStart(2, "0"),
-      yyyy = today.getFullYear(),
-      nextYear = yyyy + 1,
-      dayMonth = "10/14/",
-      birthday = dayMonth + yyyy;
-  
-  today = mm + "/" + dd + "/" + yyyy;
-  if (today > birthday) {
-    birthday = dayMonth + nextYear;'.//'
-  }
-  //end
-  
-  const countDown = new Date(birthday).getTime(),
-      x = setInterval(function() {    
-
-        const now = new Date().getTime(),
-              distance = countDown - now;
-              // distance = -1;
-
-        document.getElementById("days").innerText = Math.floor(distance / (day)),
-          document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
-          document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
-          document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
-
-        //do something later when date is reached
-        if (distance < 0) {
-          document.getElementById("headline").innerText = "Register now!";
-          document.getElementById("countdown").style.display = "none";
-          document.getElementById("content").style.display = "block";
-          clearInterval(x);
-        }
-        //seconds
-      }, 0)
-  }());
-  </script>
 
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -177,25 +130,6 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-<<<<<<< HEAD
-=======
-  <div class="timer_container">
-    <h1 id="headline">14th and 15th October</h1>
-    <div id="countdown">
-      <ul>
-        <li><span id="days"></span>days</li>
-        <li><span id="hours"></span>Hours</li>
-        <li><span id="minutes"></span>Minutes</li>
-        <li><span id="seconds"></span>Seconds</li>
-      </ul>
-    </div>
-    <div id="timer_content" class="emoji">
-      <span>🥳</span>
-      <span>🎉</span>
-      <span>🎂</span>
-    </div>
-  </div>
->>>>>>> 10fff4929e834928114f91f93ba3df2436dc3625
 
   <div id="services" class="our-services section">
     <div class="services-right-dec">
@@ -335,7 +269,7 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-  <div id="portfolio" class="our-portfolio section">
+  <!-- <div id="portfolio" class="our-portfolio section">
     <div class="portfolio-left-dec">
       <img src="assets/images/portfolio-left-dec.png" alt="">
     </div>
@@ -489,7 +423,7 @@ https://templatemo.com/tm-565-onix-digital
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div id="pricing" class="pricing-tables">
     <div class="tables-left-dec">
