--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/templatemo-onix-digital.css">
     <link rel="stylesheet" href="assets/css/animated.css">
     <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 <!--
 
 TemplateMo 565 Onix Digital
@@ -129,17 +130,15 @@ https://templatemo.com/tm-565-onix-digital
       </div>
     </div>
   </div>
-<<<<<<< HEAD
 
-=======
   <div class="timer_container">
     <h1 id="headline">14th and 15th October</h1>
     <div id="countdown">
       <ul>
-        <li><span id="days"></span>days</li>
-        <li><span id="hours"></span>Hours</li>
-        <li><span id="minutes"></span>Minutes</li>
-        <li><span id="seconds"></span>Seconds</li>
+        <li id="count"><span id="days"></span>days</li>
+        <li id="count"><span id="hours"></span>Hours</li>
+        <li id="count"><span id="minutes"></span>Minutes</li>
+        <li id="count"><span id="seconds"></span>Seconds</li>
       </ul>
     </div>
     <div id="timer_content" class="emoji">
@@ -148,7 +147,6 @@ https://templatemo.com/tm-565-onix-digital
       <span>🎂</span>
     </div>
   </div>
->>>>>>> c14fe016bb6eea6ef305e8ffe47b6dba15e33ac4
 
   <div id="services" class="our-services section">
     <div class="services-right-dec">
