--- a/index.html
+++ b/index.html
@@ -509,15 +509,24 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-4">
           <div class="item first-item">
-            <h4>Starter Plan</h4>
+            <style>
+              img {
+              border-radius: 100%;
+              margin-top: 10px ;
+                }
+            </style>
+            <h4>Objective</h4>
+            <img src="assets/images/objective.png" alt="Avatar" style="width:200px " >
+            <!-- <h4>Starter Plan</h4>
             <em>$160/mo</em>
-            <span>$140</span>
-            <ul>
+            <span>$140</span> -->
+            <p><br>To give new aspiring students and developers, an opportunity to achieve excellence and fight it out in newer, smarter and more challenging technical problem statements.</p><br>
+            <!-- <ul>
               <li>10 Projects</li>
               <li>100 GB space</li>
               <li>20 SEO checkups</li>
               <li>Basic Support</li>
-            </ul>
+            </ul> -->
             <div class="main-blue-button-hover">
               <a href="#">Get Started</a>
             </div>
