--- a/index.html
+++ b/index.html
@@ -176,8 +176,6 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-<<<<<<< HEAD
-=======
   <div class="timer_container">
     <h1 id="headline">14th and 15th October</h1>
     <div id="countdown">
@@ -194,7 +192,6 @@ https://templatemo.com/tm-565-onix-digital
       <span>🎂</span>
     </div>
   </div>
->>>>>>> 542b0e6454aea9d0a8f046a0c9ba9a2647807818
 
   <div id="services" class="our-services section">
     <div class="services-right-dec">
@@ -509,50 +506,53 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-4">
           <div class="item first-item">
-            <h4>Starter Plan</h4>
-            <em>$160/mo</em>
-            <span>$140</span>
+            <img id="card" src="assets/images/objective.png" alt="">
+            <h4 style="margin-top: 10px; font-size: 27px;">Objective</h4>
+            <!-- <em>$160/mo</em>
+            <span>$140</span> -->
             <ul>
-              <li>10 Projects</li>
-              <li>100 GB space</li>
+              <li style="font-size: 16px;">To give new aspiring students and developers, an opportunity to achieve excellence and fight it out in newer, smarter and more challenging technical problem statements.</li>
+              <!-- <li>100 GB space</li>
               <li>20 SEO checkups</li>
-              <li>Basic Support</li>
+              <li>Basic Support</li> -->
             </ul>
-            <div class="main-blue-button-hover">
+            <!-- <div class="main-blue-button-hover">
               <a href="#">Get Started</a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-lg-4">
           <div class="item second-item">
-            <h4>Standard Plan</h4>
-            <em>$240/mo</em>
-            <span>$200</span>
+            <img id="card" src="assets/images/eligibility.png" alt="">
+            <h4 style="margin-top: 10px; font-size: 27px;">Eligibility</h4>
+            <!-- <em>$240/mo</em>
+            <span>$200</span> -->
             <ul>
-              <li>20 Projects</li>
-              <li>200 GB space</li>
+              <li style="font-size: 16px;">Students pursuing any Bachelor Degree, Master Degree, any certificate course or diploma is eligible to apply. (e.g., BCA, MCA, BBA, MBA, B.Sc., M.Sc.,BTech, MTech, BCS, BCOM, etc.)</li>
+              <!-- <li>200 GB space</li>
               <li>50 SEO checkups</li>
-              <li>Pro Support</li>
+              <li>Pro Support</li> -->
             </ul>
-            <div class="main-blue-button-hover">
+            <!-- <div class="main-blue-button-hover">
               <a href="#">Get it Now</a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="col-lg-4">
           <div class="item third-item">
-            <h4>Advanced Plan</h4>
-            <em>$360/mo</em>
-            <span>$280</span>
+            <img id="card" src="assets/images/prize.png" alt="">
+            <h4 style="margin-top: 10px; font-size: 27px;">Prizes</h4>
+            <!-- <em>$360/mo</em>
+            <span>$280</span> -->
             <ul>
-              <li>30 Projects</li>
-              <li>300 GB space</li>
+              <li style="font-size: 16px;">Prizes worth Rs 1,00,000+ to be distriuted among the winners along with cetificates, trophies and refreshments for the participants.</li>
+              <!-- <li>300 GB space</li>
               <li>100 SEO checkups</li>
-              <li>Best Support</li>
+              <li>Best Support</li> -->
             </ul>
-            <div class="main-blue-button-hover">
+            <!-- <div class="main-blue-button-hover">
               <a href="#">Buy Now</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -668,6 +668,8 @@ https://templatemo.com/tm-565-onix-digital
       </div>
     </div>
   </div> -->
+
+  
 
   <div id="contact" class="contact-us section">
     <div class="container">
