--- a/index.html
+++ b/index.html
@@ -506,7 +506,6 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-4">
           <div class="item first-item">
-<<<<<<< HEAD
             <img id="card" src="assets/images/objective.png" alt="">
             <h4 style="margin-top: 10px; font-size: 27px;">Objective</h4>
             <!-- <em>$160/mo</em>
@@ -530,17 +529,15 @@ https://templatemo.com/tm-565-onix-digital
             <!-- <h4>Starter Plan</h4>
             <em>$160/mo</em>
             <span>$140</span> -->
-            <p><br>To give new aspiring students and developers, an opportunity to achieve excellence and fight it out in newer, smarter and more challenging technical problem statements.</p><br>
             <!-- <ul>
               <li>10 Projects</li>
               <li>100 GB space</li>
               <li>20 SEO checkups</li>
               <li>Basic Support</li>
             </ul> -->
-            <div class="main-blue-button-hover">
->>>>>>> 48cb975d530a8ab1b6e42759022336aff1ca2fab
+            <!-- <div class="main-blue-button-hover">
               <a href="#">Get Started</a>
-            </div> -->
+            </div> --> 
           </div>
         </div>
         <div class="col-lg-4">
