--- a/index.html
+++ b/index.html
@@ -578,6 +578,27 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
+  <div id="subscribe" class="subscribe">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="inner-content">
+            <div class="row">
+              <div class="col-lg-10 offset-lg-1">
+                <h2>Show us your talent. We'll make it shine ! </h2>
+                <form id="subscribe" action="" method="get">
+                  <!-- <input type="text" name="website" id="website" > -->
+                  <input type="text" name="email" id="email" >
+                  <button type="submit" id="form-submit" class="main-button ">Register Yourself</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <!-- <div id="video" class="our-videos section">
     <div class="videos-left-dec">
