--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@ https://templatemo.com/tm-565-onix-digital
     </div>
   </div>
 
-<<<<<<< HEAD
-=======
+
   <div class="timer_container">
     <h1 id="headline">14th and 15th October</h1>
     <div id="countdown">
@@ -194,7 +193,6 @@ https://templatemo.com/tm-565-onix-digital
       <span>🎂</span>
     </div>
   </div>
->>>>>>> 542b0e6454aea9d0a8f046a0c9ba9a2647807818
 
   <div id="services" class="our-services section">
     <div class="services-right-dec">
@@ -509,12 +507,6 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-4">
           <div class="item first-item">
-            <style>
-              img {
-              border-radius: 100%;
-              margin-top: 10px ;
-                }
-            </style>
             <h4>Objective</h4>
             <img src="assets/images/objective.png" alt="Avatar" style="width:200px " >
             <!-- <h4>Starter Plan</h4>
@@ -561,6 +553,27 @@ https://templatemo.com/tm-565-onix-digital
             </ul>
             <div class="main-blue-button-hover">
               <a href="#">Buy Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="subscribe" class="subscribe">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="inner-content">
+            <div class="row">
+              <div class="col-lg-10 offset-lg-1">
+                <h2>Show us your talent. We'll make it shine ! </h2>
+                <form id="subscribe" action="" method="get">
+                  <!-- <input type="text" name="website" id="website" > -->
+                  <input type="text" name="email" id="email" >
+                  <button type="submit" id="form-submit" class="main-button ">Register Yourself</button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
