--- a/index.html
+++ b/index.html
@@ -175,11 +175,6 @@ https://templatemo.com/tm-565-onix-digital
       </div>
     </div>
   </div>
-
-<<<<<<< HEAD
-
-=======
->>>>>>> 00dbbc7911332561ff5827367d438298636518bd
   <div class="timer_container">
     <h1 id="headline">14th and 15th October</h1>
     <div id="countdown">
@@ -287,7 +282,7 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="left-image">
-            <img src="assets/images/convo.png" alt="Two Girls working together">
+            <img src="assets/images/convo.png" alt="">
           </div>
         </div>
         <div class="col-lg-6">
@@ -579,27 +574,6 @@ https://templatemo.com/tm-565-onix-digital
             <!-- <div class="main-blue-button-hover">
               <a href="#">Buy Now</a>
             </div> -->
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="subscribe" class="subscribe">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="inner-content">
-            <div class="row">
-              <div class="col-lg-10 offset-lg-1">
-                <h2>Show us your talent. We'll make it shine ! </h2>
-                <form id="subscribe" action="" method="get">
-                  <!-- <input type="text" name="website" id="website" > -->
-                  <input type="text" name="email" id="email" >
-                  <button type="submit" id="form-submit" class="main-button ">Register Yourself</button>
-                </form>
-              </div>
-            </div>
           </div>
         </div>
       </div>
