--- a/index.html
+++ b/index.html
@@ -180,17 +180,6 @@ https://templatemo.com/tm-565-onix-digital
       </div>
     </div>
   </div>
-<<<<<<< HEAD
-=======
-
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
-
-=======
->>>>>>> 00dbbc7911332561ff5827367d438298636518bd
->>>>>>> 8e97960d480d17a5811471a91efd1390a1334baa
->>>>>>> 4a78a9d484ba553949695984e0a42cbd3764e807
   <div class="timer_container">
     <h1 id="headline">14th and 15th October</h1>
     <div id="countdown">
@@ -207,10 +196,6 @@ https://templatemo.com/tm-565-onix-digital
       <span>🎂</span>
     </div>
   </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> 8e97960d480d17a5811471a91efd1390a1334baa
 
   <div id="services" class="our-services section">
     <div class="services-right-dec">
@@ -532,8 +517,7 @@ https://templatemo.com/tm-565-onix-digital
       <div class="row">
         <div class="col-lg-4">
           <div class="item first-item">
-<<<<<<< HEAD
-=======
+
             <img id="card" src="assets/images/objective.png" alt="">
             <h4 style="margin-top: 10px; font-size: 27px;">Objective</h4>
             <!-- <em>$160/mo</em>
@@ -545,24 +529,19 @@ https://templatemo.com/tm-565-onix-digital
               <li>Basic Support</li> -->
             </ul>
             <!-- <div class="main-blue-button-hover">
-=======
             <style>
               img {
                 border-radius: 100%;
                 /* margin-top: 10px; */
               }
             </style>
->>>>>>> 00dbbc7911332561ff5827367d438298636518bd
             <h4>Objective</h4>
             <img src="assets/images/objective.png" alt="Avatar" style="width:200px ">
             <!-- <h4>Starter Plan</h4>
             <em>$160/mo</em>
             <span>$140</span> -->
-<<<<<<< HEAD
-            <p><br>To give new aspiring students and developers, an opportunity to achieve excellence and fight it out
-              in newer, smarter and more challenging technical problem statements.</p><br>
-=======
->>>>>>> 8e97960d480d17a5811471a91efd1390a1334baa
+            <!-- <p><br>To give new aspiring students and developers, an opportunity to achieve excellence and fight it out
+              in newer, smarter and more challenging technical problem statements.</p><br> -->
             <!-- <ul>
               <li>10 Projects</li>
               <li>100 GB space</li>
